# ecs-scaler

./: Dockerfile  Makefile  README.md  mise.toml  pyproject.toml  scale.py
.github/workflows/: publish.yml
